--- a/index.html
+++ b/index.html
@@ -58,6 +58,23 @@
                 </section>
 
                 <section>
+                    <h1>What does Nielsen Group think about
+                        <span class="three-d" style="width: 140px; height: 96px;">
+                            <span class="three-d-element">
+                                <span class="emph">3D</span>
+                            </span>
+                            <span class="three-d-element-2">
+                                <span class="emph">3D</span>
+                            </span>
+                            <span class="three-d-element-3">
+                                <span class="emph">3D</span>
+                            </span>
+                        </span>?
+                    </h2>
+                    <p><a href="https://www.nngroup.com/articles/2d-is-better-than-3d/" target="_blank">2D is Better Than 3D (1998)</a></p>
+                </section>
+
+                <section>
                     <section>
                         <h1>Browser Skillz</h1>
                         <p>How do browsers produce <span class="emph">3D</span> effects?</p>
@@ -131,16 +148,12 @@
 
                     <section>
                         <h2><span class="emph-secondary-muted">Interactions</span></h2>
-
-                        <p>What types of <span class="emph-secondary-muted">input</span> do users give the web?</p>
-
                         <ul>
-                            <li>Text Entry</li>
                             <li><span class="emph-secondary">Selection</span></li>
                             <li><span class="emph-secondary">Navigation</span></li>
                         </ul>
-
                     </section>
+
                 </section>
 
                 <section>
@@ -412,10 +425,18 @@
 
                     <section>
                         <h2><span class="emph-secondary">Navigation</span> - CSS <span class="emph">3D</span> & WebGL</h2>
+                        <h3>Consistent Navigation Patterns</h3>
                         <ul>
-                            <li>Standards for which way navigation will occur</li>
-                            <li>Map navigation (standard and alternative methods)</li>
-                            <li>Non-linear discrete transitions</li>
+                            <li>Consistent placement and treatment of buttons for changing views</li>
+                        </ul>
+                    </section>
+
+                    <section>
+                        <h2><span class="emph-secondary">Navigation</span> - CSS <span class="emph">3D</span> & WebGL</h2>
+                        <h3>Map navigation (standard and alternative methods)</h3>
+                        <ul>
+                            <li>Pan and Zoom</li>
+                            <li>Shortcuts for Zoom</li>
                         </ul>
                     </section>
 
@@ -520,6 +541,11 @@
                                 </span>
                             </span>
                         </h1>
+                        <p>Related Research</p>
+                        <ul>
+                            <li><a href="http://www.darrenscorner.com/portfolio/3d-web-usability/" target="_blank">3D Manipulation Usability Study</a></li>
+                            <li><a href="https://hal.inria.fr/hal-01056245/document" target="_blank">Interaction Design and Usability of Learning spaces in 3D Multi-user Virtual Worlds</a></li>
+                        </ul>
                     </section>
                 </section>
 
