more final tweaks

--- a/index.html
+++ b/index.html
@@ -58,20 +58,44 @@
                 </section>
 
                 <section>
-                    <h1>What does Nielsen Group think about
-                        <span class="three-d" style="width: 140px; height: 96px;">
-                            <span class="three-d-element">
-                                <span class="emph">3D</span>
+                    <section>
+                        <h1>What does Nielsen Group think about
+                            <span class="three-d" style="width: 140px; height: 96px;">
+                                <span class="three-d-element">
+                                    <span class="emph">3D</span>
+                                </span>
+                                <span class="three-d-element-2">
+                                    <span class="emph">3D</span>
+                                </span>
+                                <span class="three-d-element-3">
+                                    <span class="emph">3D</span>
+                                </span>
+                            </span>?
+                        </h2>
+                        <p><a href="https://www.nngroup.com/articles/2d-is-better-than-3d/" target="_blank">2D is Better Than 3D (1998)</a></p>
+                    </section>
+                    <section>
+                        <h1>Have a good reason for
+                            <span class="three-d" style="width: 140px; height: 96px;">
+                                <span class="three-d-element">
+                                    <span class="emph">3D</span>
+                                </span>
+                                <span class="three-d-element-2">
+                                    <span class="emph">3D</span>
+                                </span>
+                                <span class="three-d-element-3">
+                                    <span class="emph">3D</span>
+                                </span>
                             </span>
-                            <span class="three-d-element-2">
-                                <span class="emph">3D</span>
-                            </span>
-                            <span class="three-d-element-3">
-                                <span class="emph">3D</span>
-                            </span>
-                        </span>?
-                    </h2>
-                    <p><a href="https://www.nngroup.com/articles/2d-is-better-than-3d/" target="_blank">2D is Better Than 3D (1998)</a></p>
+                        </h2>
+                        <ul>
+                            <li>Art</li>
+                            <li>Portfolio Sites</li>
+                            <li>Games</li>
+                            <li>Maps</li>
+                            <li>Education</li>
+                        </ul>
+                    </section>
                 </section>
 
                 <section>
@@ -175,7 +199,7 @@
                     <section>
                         <h2>Mouse <span class="emph-secondary-muted">Input</span></h2>
                         <ul>
-                            <li><span class="emph-secondary">Selection</span> (click)</li>
+                            <li><span class="emph-secondary">Selection</span> (click / drag)</li>
                             <li><span class="emph-secondary">Navigation</span> (scroll / pan / zoom)</li>
                         </ul>
                     </section>
@@ -287,7 +311,7 @@
                     </section>
 
                     <section>
-                        <h2><span class="emph-secondary">Navigation</span> : <span class="emph-secondary-muted">( Discrete ) A to B </span></h2>
+                        <h2><span class="emph-secondary">Navigation</span> - <span class="emph-secondary-muted">A to B (discrete)</span></h2>
                         <h3>Implementation - wire up event handlers to nav logic</h3>
                         <p><span class="emph-secondary-muted">Input</span> is binary.</p>
                         <ul>
@@ -302,7 +326,7 @@
                     </section>
 
                     <section>
-                        <h2><span class="emph-secondary">Navigation</span> : <span class="emph-secondary-muted">Pan</span></h2>
+                        <h2><span class="emph-secondary">Navigation</span> - <span class="emph-secondary-muted">Pan</span></h2>
                         <h3>Implementation - wire up event handlers to nav logic</h3>
                         <p><span class="emph-secondary-muted">Input</span> is two dimensional.</p>
                         <ul>
@@ -313,7 +337,7 @@
                     </section>
 
                     <section>
-                        <h2><span class="emph-secondary">Navigation</span> : <span class="emph-secondary-muted">Zoom</span></h2>
+                        <h2><span class="emph-secondary">Navigation</span> - <span class="emph-secondary-muted">Zoom</span></h2>
                         <h3>Implementation - wire up event handlers to nav logic</h3>
                         <p><span class="emph-secondary-muted">Input</span> is one dimensional.</p>
                         <ul>
@@ -486,6 +510,7 @@
 
                     <section data-background="resources/library_2.png"></section>
                     <section data-background="resources/library_3.png"></section>
+                    <section data-background="resources/library_4.png"></section>
 
                     <section>
                         <h2><span class="emph-secondary">Navigation</span> - CSS <span class="emph">3D</span> & WebGL</h2>
