--- a/index.html
+++ b/index.html
@@ -189,10 +189,8 @@
                     <section>
                         <h2>Keyboard <span class="emph-secondary-muted">Input</span></h2>
                         <ul>
-                            <li>Text Entry</li>
-                            <li>Cancel / Escape</li>
                             <li><span class="emph-secondary">Selection</span> (spacebar, enter)</li>
-                            <li><span class="emph-secondary">Navigation</span> (next / previous / up / down)</li>
+                            <li><span class="emph-secondary">Navigation</span> (arrow keys)</li>
                         </ul>
                     </section>
 
@@ -207,7 +205,6 @@
                     <section>
                         <h2>Touch <span class="emph-secondary-muted">Input</span></h2>
                         <ul>
-                            <li>Text Entry (virtual keyboard)</li>
                             <li><span class="emph-secondary">Selection</span> (tap)</li>
                             <li><span class="emph-secondary">Navigation</span> (scroll / pan / zoom)</li>
                         </ul>
@@ -493,7 +490,7 @@
                     <section>
                         <h2><span class="emph-secondary">Navigation</span> - CSS <span class="emph">3D</span> & WebGL</h2>
                         <h3>Non Linear Transition Challenges</h3>
-                        <h4>Getting to library front door</h3>
+                        <h4>Getting to library front door ( Demo )</h3>
                     </section>
 
                     <section data-background="resources/library_1.png"></section>
